# frame

./: .gitignore  README.md  pyproject.toml
scripts/: loop.py
src/framevision/: __init__.py
src/framevision/dataset/: __init__.py  dataset.py
src/framevision/dataset/keypoint_map/: __init__.py  order.py
src/framevision/dataset/load_utils/: load.py
src/framevision/dataset/split_utils/: split.py
src/framevision/pl_wrappers/: __init__.py  dataset.py
src/framevision/processing/: __init__.py  crop_pad.py  normalize.py  resize.py
